--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+
+make_tables.py
+misc-book
+data/dft_East.csv
+data/dft_West.csv
+data/game_simple.txt
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
